# opencl

./: Dockerfile  Jenkinsfile  README.md
arrayfire/: svd.cpp
lbm2d/: 2dLB.cpp  2dLB.cu  2dLB_ocl.cpp  CMakeLists.txt
lbm2d/ocl/: CMakeLists.txt
lbm2d/ocl/kernels/: saxpy.cl
saxpy/: CMakeLists.txt  main.cpp
saxpy/kernels/: saxpy.cl
svd/: CMakeLists.txt  svd_jacobi.cu  svd_qr.cu
viennacl/: CMakeLists.txt  viennacl_svd.cpp
